refactoring: add new folder intro. move all files to new folder

--- a/1 Intro/Imports.ipynb
+++ b/1 Intro/Imports.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bibliotecas randrange y seed para números aleatorios"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -80,6 +87,13 @@
    ],
    "source": [
     "len(notas_matematicas)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Biblicoteca Matplotlib para Gráficos"
    ]
   }
  ],
